<resources>
    <string name="app_name">Glaid Driver</string>
    <string name="i_know_my_email">I know my Email</string>
    <string name="if_you_cannot_remember_your_password_we_can_help_to_get_started_choose_an_option_below">If you cannot remember your password, we can help. To get started, choose an option below</string>
    <string name="continue_text">Continue</string>
    <string name="i_know_my_phone_number">I know my Phone Number</string>
    <string name="chevron_icon">chevron</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot password</string>
    <string name="backgroud_layout">backgroud layout</string>
    <string name="forgot_password_image">forgot password image</string>
    <string name="email_recovery_text">Please enter the email address associated with your account below</string>
    <string name="phone_recovery_text">Please enter the phone number associated with your account below</string>
    <string name="otp">OTP</string>
    <string name="otp_recovery_text">A one-time pin has been sent to your phone number. Please enter it below</string>
    <string name="get_started_button">get started button</string>
    <string name="todo">TODO</string>
    <string name="title_activity_driver_map">DriverMapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_maps">Map</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="order_history">Order History</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="upload_image">Upload Image</string>
    <string name="sign_out">Sign Out</string>
    <string name="connect_facebook">Connect Facebook</string>
    <string name="change_password">Change Password</string>
    <string name="top_questions">Top Questions</string>
    <string name="contact_us">Contact Us</string>
    <string name="liters">liters</string>
    <string name="dot">•</string>
    <string name="location_time"><![CDATA[Location & Time]]></string>
    <string name="payment">Payment</string>
    <string name="rate_customer">Rate Customer</string>
    <string name="delivered">Delivered</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="driver">Driver</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="by_signing_up_you_agree_to_our">By signing up you agree to our</string>
    <string name="or">OR</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="full_name">Full Name</string>
    <string name="email_email_com">Email@email.com</string>
    <string name="email">Email</string>
    <string name="_2341234567890">+2341234567890</string>
    <string name="bank_account">Bank Account</string>
    <string name="_2356">****2356</string>
    <string name="guarantee_trust_bank">Guarantee Trust Bank</string>
    <string name="need_futher_assistance">Need further assistance?</string>
    <string name="question">Question</string>
    <string name="jargon">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="start_a_live_chat">Start a live chat</string>
    <string name="send_an_email">Send an Email</string>
    <string name="share_to_facebook">Share to Facebook</string>
    <string name="send_a_tweet">Send a Tweet</string>
    <string name="share_to_whatsapp">Share to WhatsApp</string>
    <string name="get_1000_when_you_invite_your_friends_to_use_glaid_using_your_special_invite_code_below">Get ₦1000 when you invite your friends to use Glaid using your special invite code below</string>
    <string name="order_invoice">Order Invoice</string>
    <string name="paid">Paid!</string>
    <string name="chidozie_henry">Chidozie Henry</string>
    <string name="awaiting_payment">Awaiting Payment</string>
    <string name="fee_is">Fee is &#8358;%1$s</string>
    <string name="_9000">₦9000</string>
    <string name="payment_type">Payment Type</string>
    <string name="card">Card</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="order_number">Order number: %1$s</string>
    <string name="_12134526">12134526</string>
    <string name="_12_30_am_3_3_2020">12:30 AM - 3/3/2020</string>
    <string name="price">Price (₦)</string>
    <string name="quantity">Quantity</string>
    <string name="item">Item</string>
    <string name="_10_liters">10 Liters</string>
    <string name="_8000">8000</string>
    <string name="diesel">Diesel</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery">Delivery</string>
    <string name="tax">Tax</string>
    <string name="_500">500</string>
    <string name="total_outstanding">Total Outstanding</string>
    <string name="billed_to">Billed to</string>
    <string name="one_last_step">One Last Step</string>
    <string name="sign_up">Sign up</string>
    <string name="did_not_receive_an_otp">Did not receive an OTP?</string>
    <string name="resend">Resend</string>
    <string name="chat_with_henry">Chat With Henry</string>
    <string name="type_a_message">Type a message</string>
    <string name="send_otp">Send OTP</string>
    <string name="send_mail">Send Mail</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="_00_00">₦00.00</string>
    <string name="waiting_for_an_order">Waiting for an Order....</string>
    <string name="hello_john">Hello John,</string>
    <string name="start_delivery">Start Delivery</string>
    <string name="complete_delivery">Complete Delivery</string>
    <string name="you_have_a_new_order">You have a new order!</string>
    <string name="starting_delivery">Starting Delivery....</string>
    <string name="payment_pending">Payment Pending....</string>
    <string name="splash_icon">splash_icon</string>
    <string name="sh_user_details">userDetails</string>
    <string name="sh_wallet">wallet</string>
    <string name="sh_pending_order">pending_order</string>
    <string name="sh_orders">orders</string>
    <string name="sh_token">auth_token</string>
    <string name="auth_key_name">driver_authorization</string>
    <string name="cached_data">driver_cached_data</string>
    <string name="processing">Processing</string>
    <string name="internet_error_msg">Please check your internet</string>
    <string name="error_occurred">An error occurred, please try again later</string>
    <string name="background">background</string>
    <string name="sign_up_agreement">By signing up you agree to our</string>
    <string name="phone_number_input_label">Phone Number</string>
    <string name="bank_account_input_label">Bank Account</string>
    <string name="home_address_input_label">Home Address</string>
    <string name="full_name_input_label">Full Name</string>
    <string name="sign_up_intro_text">Let’s get you signed up so you can be a driver</string>
    <string name="sign_up_intro_title">Hi There!</string>
    <string name="email_input_label">Email</string>
    <string name="password_input_label">Password</string>
    <string name="verify_password_input_label">Re-enter Password</string>
    <string name="register_button_label">Continue</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="password_invalid">Password must contain at least one number</string>
    <string name="field_empty">Cannot be empty</string>
    <string name="invalid_format">Invalid format</string>
    <string name="did_not_receive_otp">Did not receive an OTP?</string>
    <string name="otp_input_label">OTP</string>
    <string name="complete_registration_intro_text">A one-time pin has been sent to your phone number. Please enter it below</string>
    <string name="complete_registration_intro_title">One Last Step</string>
    <string name="complete_registration_intro_image">intro image</string>
    <string name="sign_up_image">sign Up Image</string>
    <string name="chevron_right">gas_type_button_img</string>
    <string name="reset_password_intro_text">Please enter the %1$s associated with your account below</string>
    <string name="reset_password_intro_image">reset_password_intro_image</string>
    <string name="get_otp_button_label">Send otp</string>
    <string name="otp_reset_intro_text">Please enter the %1$s associated with your account below</string>
    <string name="reset_password" >Reset Password</string>
    <string name="set_reset_password_intro_text">Enter your new password below</string>
    <string name="sign_out_btn_label">Sign Out</string>
    <string name="formatted_quantity">%1$.1f %2$s</string>
    <string name="formatted_amount">&#8358;%1$s</string>
    <string name="enable_gps_msg" >You need to enable GPS to use this App properly, Do you wish to enable it?</string>
    <string name="fs_user_locations" >User Locations</string>
    <string name="naira_logo">naira logo</string>
    <string name="home_intro_image">home intro image</string>
    <string name="home_greeting_intro_text">Hello %1$s</string>
    <string name="home_intro_text">Waiting for an Order....</string>
    <string name="new_order_customer_name">Your Customer is %1$s</string>
    <string name="details">Details</string>
    <string name="call_customer">Call Customer</string>
    <string name="text_customer">Text Customer</string>
    <string name="chat_user_name">Chat With %1$s</string>
    <string name="notification_title">location service</string>
    <string name="notification_message">Glaid is running in the background</string>
    <string name="fs_pending_orders">Pending Orders</string>
    <string name="fs_pending_orders_driver_id">driverId</string>
    <string name="fs_pending_orders_status">status</string>
    <string name="fs_chat_rooms">Chat Rooms</string>
    <string name="fs_messages">messages</string>
    <string name="fs_order_messages">order_messages</string>
    <string name="fs_support_messages">support_messages</string>
    <string name="from_the_nearest_fuel_station">From the nearest fuel station</string>
    <string name="order_details">Order Details</string>
    <string name="view_invoice">View Invoice</string>
    <string name="status">Status</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done">Done</string>
    <string name="please_rate_customer">Please rate customer</string>
    <string name="delivery_complete">Delivery Complete</string>
    <string name="fuel_icon">fuel icon</string>
    <string name="reroute">Reroute</string>
    <string name="failed">Failed</string>
    <string name="success">Success</string>
    <string name="app_logo">app_logo</string>
    <string name="total">Total</string>
</resources>