<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorPrimary"
tools:context=".controller.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/backgroud_layout"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/driverbackground" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/driver_bg_gradient_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintDimensionRatio="W, 1"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/forgot_password_image"
            app:layout_constraintBottom_toTopOf="@+id/resetPasswordIntroTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/forgot_password" />

        <TextView
            android:id="@+id/resetPasswordIntroTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/forgot_password"
            android:textColor="#333333"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/resetPasswordIntroText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/resetPasswordIntroText"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center_horizontal"
            android:text="@string/if_you_cannot_remember_your_password_we_can_help_to_get_started_choose_an_option_below"
            android:textColor="#333333"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/radioGroupForgotPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lineHeight="19sp" />

        <RadioGroup
            android:id="@+id/radioGroupForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/emailRadio"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/ic_yellow_btn_bar"
                android:paddingHorizontal="10dp"
                android:buttonTint="@color/AppPrimaryPurple"
                android:text="@string/i_know_my_email"
                android:layout_gravity="center_vertical|end"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/telRadio"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/ic_yellow_btn_bar"
                android:buttonTint="@color/AppPrimaryPurple"
                android:text="@string/i_know_my_phone_number"
                android:layout_gravity="center_vertical|end"
                android:textSize="18sp"/>
        </RadioGroup>

        <View
            android:id="@+id/divider"
            android:layout_width="371dp"
            android:layout_height="2dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ic_glaidline"
            app:layout_constraintBottom_toTopOf="@+id/resetPasswordBtn"
            app:layout_constraintEnd_toEndOf="@+id/resetPasswordBtn"
            app:layout_constraintStart_toStartOf="@+id/resetPasswordBtn" />

        <Button
            android:id="@+id/resetPasswordBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/ic_glaidbtnbanner"
            android:drawableEnd="@drawable/ic_enter_chevron"
            android:onClick="getOtpTypeMethod"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/continue_text"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center|start"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>